--- a/ml_core/data_analysis.ipynb
+++ b/ml_core/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "import os\n",
@@ -38,18 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "model = None\n",
     "torch.manual_seed(42)\n",
     "sns.set_theme(\"notebook\", \"darkgrid\")\n",
     "np.random.seed(42)\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "root_path = os.path.join(os.path.abspath('..'), \"data\", \"chest_xray\")\n",
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "img_sample = 10\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "outputs": [
     {
      "data": {
@@ -192,11 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "class PneumoniaModel(nn.Module):\n",
-    "    def __init__(self, input_shape, dropout=0.1, n_filters=32):\n",
+    "    def __init__(self, input_shape, dropout=0.1, n_filters=16):\n",
     "        super(PneumoniaModel, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, n_filters, 3, 1)\n",
     "        self.pool1 = nn.MaxPool2d((3, 3), stride=1)\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "def preprocess(x, resize=128, mode=\"train\"):\n",
@@ -271,10 +272,10 @@
     "    return a[p], b[p]\n",
     "\n",
     "def get_metrics(TP,TN,FP,FN):\n",
-    "    precision = TP/(TP+FP)\n",
-    "    recall= TP/(TP+FN)\n",
-    "    accuracy = (TP+TN)/(TP+FP+FN+TN)\n",
-    "    f1 =  2*(recall * precision) / (recall + precision)\n",
+    "    precision = TP/max(1e-8,TP+FP)\n",
+    "    recall= TP/max(1e-8,TP+FN)\n",
+    "    accuracy = (TP+TN)/max(1e-8,TP+FP+FN+TN)\n",
+    "    f1 =  2*(recall * precision) / max(1e-8,recall + precision)\n",
     "    return f1, accuracy, precision, recall"
    ],
    "metadata": {
@@ -286,8 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 46,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10432, 1, 128, 128]) torch.Size([10432]) torch.Size([624, 1, 128, 128]) torch.Size([624])\n"
+     ]
+    }
+   ],
    "source": [
     "path1 = os.path.join(root_path, \"train\", \"NORMAL\")\n",
     "path2 = os.path.join(root_path, \"train\", \"PNEUMONIA\")\n",
@@ -316,11 +325,11 @@
     "y_train1 = np.zeros((len(images1), 2))\n",
     "y_train1[:, 0] = 1.\n",
     "y_train2 = np.zeros((len(images2), 2))\n",
-    "y_train1[:, 1] = 1.\n",
+    "y_train2[:, 1] = 1.\n",
     "y_test1 = np.zeros((len(images3), 2))\n",
-    "y_test1[:, 1] = 1.\n",
+    "y_test1[:, 0] = 1.\n",
     "y_test2 = np.zeros((len(images4), 2))\n",
-    "y_test2[:, 0] = 1.\n",
+    "y_test2[:, 1] = 1.\n",
     "X_train = np.concatenate((X_train1, X_train2))\n",
     "y_train = np.concatenate((y_train1, y_train2))\n",
     "X_test = np.concatenate((X_test1, X_test2))\n",
@@ -329,23 +338,22 @@
     "X_train, y_train = unison_shuffled_copies(X_train, y_train)\n",
     "X_test, y_test = unison_shuffled_copies(X_test, y_test)\n",
     "\n",
-    "X_train = torch.tensor(np.moveaxis(X_train, [-1], [1]))\n",
-    "y_train = torch.tensor(y_train)\n",
-    "X_test = torch.tensor(np.moveaxis(X_test, [-1], [1]))\n",
-    "y_test = torch.tensor(y_test)\n",
+    "X_train = torch.tensor(np.moveaxis(X_train, [-1], [1]),requires_grad=True)\n",
+    "y_train = torch.tensor(y_train,requires_grad=False).long().argmax(1)\n",
+    "X_test = torch.tensor(np.moveaxis(X_test, [-1], [1]),requires_grad=True)\n",
+    "y_test = torch.tensor(y_test,requires_grad=False).long().argmax(1)\n",
     "print(X_train.shape, y_train.shape, X_test.shape, y_test.shape)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "def train(model, X, y, criterion, optimizer, batch_size, epochs):\n",
@@ -358,10 +366,10 @@
     "            input_batch = X[idx:idx + batch_size]\n",
     "            input_batch = input_batch.cuda().float()\n",
     "            target = y[idx:idx + batch_size]\n",
-    "            target = target.cuda().float()\n",
+    "            target = target.cuda()\n",
     "            optimizer.zero_grad()\n",
     "            preds = model.forward(input_batch)\n",
-    "            loss = criterion(preds.long(), target.long())\n",
+    "            loss = criterion(preds, target)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            running_loss += float(loss)\n",
@@ -389,10 +397,10 @@
     "            target = target.cuda().float()\n",
     "            outputs = model(input_batch)\n",
     "\n",
-    "            for tgt, out in zip(target, outputs):\n",
-    "                predicted = out.argmax()\n",
-    "                real = tgt.argmax()\n",
-    "                if real == 1:\n",
+    "            for out,tgt in zip(outputs, target):\n",
+    "                predicted = int(out.argmax())\n",
+    "                real = int(tgt)\n",
+    "                if int(real) == 1:\n",
     "                    if predicted ==1:\n",
     "                        TP += 1\n",
     "                    else:\n",
@@ -403,23 +411,61 @@
     "                    else:\n",
     "                        TN += 1\n",
     "    f1, accuracy, precision, recall = get_metrics(TP,TN,FP,FN)\n",
-    "    print(f'{\"Model metrics:\": >15}F1 Score => {f1 :.2%}'\n",
-    "          f\"{'': >15}Accuracy Score => {accuracy :.2%}\"\n",
-    "          f\"{'': >15}Precision Score => {precision :.2%}\"\n",
-    "          f\"{'': >15}Recall Score => {recall :.2%}\")\n"
+    "    print(f'{\"Model metrics:\": <15}F1 Score => {f1 :.2%}\\n'\n",
+    "          f\"{'': >15}Accuracy Score => {accuracy :.2%}\\n\"\n",
+    "          f\"{'': >15}Precision Score => {precision :.2%}\\n\"\n",
+    "          f\"{'': >15}Recall Score => {recall :.2%}\\n\"\n",
+    "          f\"{'': >15}TP,TN,FP,FN Score => {TP}, {TN}, {FP}, {FN}\\n\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "outputs": [],
+   "source": [
+    "del model"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PneumoniaModel(\n",
+      "  (conv1): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (pool1): MaxPool2d(kernel_size=(3, 3), stride=1, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (dropout1): Dropout(p=0.1, inplace=False)\n",
+      "  (conv2): Conv2d(16, 8, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (pool2): MaxPool2d(kernel_size=(3, 3), stride=1, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (dropout2): Dropout(p=0.1, inplace=False)\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear1): Linear(in_features=115200, out_features=1024, bias=True)\n",
+      "  (activation1): LeakyReLU(negative_slope=0.01)\n",
+      "  (dropout3): Dropout(p=0.1, inplace=False)\n",
+      "  (linear2): Linear(in_features=1024, out_features=1024, bias=True)\n",
+      "  (activation2): LeakyReLU(negative_slope=0.01)\n",
+      "  (dropout4): Dropout(p=0.1, inplace=False)\n",
+      "  (linear3): Linear(in_features=1024, out_features=2, bias=True)\n",
+      "  (softmax): Softmax(dim=0)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "model = PneumoniaModel((128, 128), 0.1)\n",
     "model.to(\"cuda\")\n",
@@ -428,19 +474,29 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.24 0.0135\n",
+      "0.28 0.0135\n",
+      "0.32 0.0135\n",
+      "0.36 0.0135\n"
+     ]
+    }
+   ],
    "source": [
-    "criterion = nn.CrossEntropyLoss().cuda()\n",
-    "learning_rate = 1e-2\n",
-    "batch_size = 200\n",
+    "criterion = CrossEntropyLoss().cuda()\n",
+    "learning_rate = 1e-5\n",
+    "batch_size = 50\n",
     "epochs = 25\n",
     "optimizer = Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
@@ -551,7 +607,7 @@
     "plt.axis(\"off\")\n",
     "plt.title(title)\n",
     "\n",
-    "square = 2\n",
+    "square = 16\n",
     "for i in range(2):\n",
     "    ix = 0\n",
     "    for x in range(square):\n",
@@ -570,14 +626,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
