Reorganizing file structure, adding templates

--- a/ml_core/data_analysis.ipynb
+++ b/ml_core/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "outputs": [],
    "source": [
     "import os\n",
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 90,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 39,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "root_path = os.path.join(os.path.abspath('..'), \"data\", \"chest_xray\")\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "outputs": [],
    "source": [
     "img_sample = 10\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "outputs": [
     {
      "data": {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 95,
    "outputs": [],
    "source": [
     "class PneumoniaModel(nn.Module):\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "def preprocess(x, resize=128, mode=\"train\"):\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 97,
    "outputs": [
     {
      "name": "stdout",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "outputs": [],
    "source": [
     "def train(model, X, y, criterion, optimizer, batch_size, epochs):\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 99,
    "outputs": [],
    "source": [
     "del model"
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 100,
    "outputs": [
     {
      "name": "stdout",
@@ -449,17 +449,17 @@
       "PneumoniaModel(\n",
       "  (conv1): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1))\n",
       "  (pool1): MaxPool2d(kernel_size=(3, 3), stride=1, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (dropout1): Dropout(p=0.1, inplace=False)\n",
+      "  (dropout1): Dropout(p=0.4, inplace=False)\n",
       "  (conv2): Conv2d(16, 8, kernel_size=(3, 3), stride=(1, 1))\n",
       "  (pool2): MaxPool2d(kernel_size=(3, 3), stride=1, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (dropout2): Dropout(p=0.1, inplace=False)\n",
+      "  (dropout2): Dropout(p=0.4, inplace=False)\n",
       "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
       "  (linear1): Linear(in_features=115200, out_features=1024, bias=True)\n",
       "  (activation1): LeakyReLU(negative_slope=0.01)\n",
-      "  (dropout3): Dropout(p=0.1, inplace=False)\n",
+      "  (dropout3): Dropout(p=0.4, inplace=False)\n",
       "  (linear2): Linear(in_features=1024, out_features=1024, bias=True)\n",
       "  (activation2): LeakyReLU(negative_slope=0.01)\n",
-      "  (dropout4): Dropout(p=0.1, inplace=False)\n",
+      "  (dropout4): Dropout(p=0.4, inplace=False)\n",
       "  (linear3): Linear(in_features=1024, out_features=2, bias=True)\n",
       "  (softmax): Softmax(dim=0)\n",
       ")\n"
@@ -467,7 +467,7 @@
     }
    ],
    "source": [
-    "model = PneumoniaModel((128, 128), 0.1)\n",
+    "model = PneumoniaModel((128, 128), 0.4, 16)\n",
     "model.to(\"cuda\")\n",
     "print(model)\n"
    ],
@@ -486,10 +486,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.24 0.0135\n",
-      "0.28 0.0135\n",
-      "0.32 0.0135\n",
-      "0.36 0.0135\n"
+      "0.24 0.0136\n",
+      "0.28 0.0136\n"
      ]
     }
    ],
@@ -581,40 +579,40 @@
     "plt.imshow(np.moveaxis(img[0], 0, -1), cmap=\"gray\")\n",
     "\n",
     "img = torch.tensor(img).float().cuda()\n",
-    "pred = model(img).cpu()\n",
+    "pred = model(img)\n",
     "print(pred)\n",
+    "pred = pred.cpu()\n",
     "idx = int(pred.argmax(1))\n",
     "title = f\"Chest X-Ray of a detected {img_types[idx].lower()} chest.\\n\"\n",
     "    # f\"With a confidence level of {float(pred[idx][0]):>5.2%}\"\n",
     "features2 = model.forward(img, -1).detach().cpu()\n",
     "features1 = model.forward(img, -2).detach().cpu()\n",
     "print(features1.shape)\n",
+    "print(features2.shape)\n",
     "sns.set_theme(\"notebook\", \"white\")\n",
     "fig = plt.figure()\n",
     "plt.axis(\"off\")\n",
     "plt.title(title)\n",
     "\n",
-    "square = 2\n",
-    "for i in range(2):\n",
-    "    ix = 0\n",
-    "    for x in range(square):\n",
-    "        ax = fig.add_subplot(2, 1, ix + 1)\n",
-    "        ax.set_axis_off()\n",
-    "        ax.imshow(features1[0, ix, :, :], cmap='gray')\n",
-    "        ix += 1\n",
+    "square = 16\n",
+    "ix = 0\n",
+    "for x in range(square):\n",
+    "    ax = fig.add_subplot(int(square**0.5), int(square**0.5), ix + 1)\n",
+    "    ax.set_axis_off()\n",
+    "    ax.imshow(features1[0, ix, :, :], cmap='gray')\n",
+    "    ix += 1\n",
     "plt.show()\n",
     "fig = plt.figure()\n",
     "plt.axis(\"off\")\n",
     "plt.title(title)\n",
     "\n",
-    "square = 16\n",
-    "for i in range(2):\n",
-    "    ix = 0\n",
-    "    for x in range(square):\n",
-    "        ax = fig.add_subplot(2, 1, ix + 1)\n",
-    "        ax.set_axis_off()\n",
-    "        ax.imshow(features2[0, ix, :, :], cmap='gray')\n",
-    "        ix += 1\n"
+    "square //=2\n",
+    "ix = 0\n",
+    "for x in range(square):\n",
+    "    ax = fig.add_subplot(int(square**0.5)+1, int(square**0.5)+1, ix+1)\n",
+    "    ax.set_axis_off()\n",
+    "    ax.imshow(features2[0, ix, :, :], cmap='gray')\n",
+    "    ix += 1\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -626,13 +624,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
