--- a/ml_core/data_analysis.ipynb
+++ b/ml_core/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "outputs": [],
    "source": [
     "import os\n",
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 90,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "outputs": [],
    "source": [
     "root_path = os.path.join(os.path.abspath('..'), \"data\", \"chest_xray\")\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "outputs": [],
    "source": [
     "img_sample = 10\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 111,
    "outputs": [
     {
      "data": {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "outputs": [
     {
      "data": {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "outputs": [],
    "source": [
     "class PneumoniaModel(nn.Module):\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "outputs": [],
    "source": [
     "def preprocess(x, resize=128, mode=\"train\"):\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 115,
    "outputs": [
     {
      "name": "stdout",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 116,
    "outputs": [],
    "source": [
     "def train(model, X, y, criterion, optimizer, batch_size, epochs):\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 117,
    "outputs": [],
    "source": [
     "del model"
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 118,
    "outputs": [
     {
      "name": "stdout",
@@ -449,17 +449,17 @@
       "PneumoniaModel(\n",
       "  (conv1): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1))\n",
       "  (pool1): MaxPool2d(kernel_size=(3, 3), stride=1, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (dropout1): Dropout(p=0.4, inplace=False)\n",
+      "  (dropout1): Dropout(p=0.6, inplace=False)\n",
       "  (conv2): Conv2d(16, 8, kernel_size=(3, 3), stride=(1, 1))\n",
       "  (pool2): MaxPool2d(kernel_size=(3, 3), stride=1, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (dropout2): Dropout(p=0.4, inplace=False)\n",
+      "  (dropout2): Dropout(p=0.6, inplace=False)\n",
       "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
       "  (linear1): Linear(in_features=115200, out_features=1024, bias=True)\n",
       "  (activation1): LeakyReLU(negative_slope=0.01)\n",
-      "  (dropout3): Dropout(p=0.4, inplace=False)\n",
+      "  (dropout3): Dropout(p=0.6, inplace=False)\n",
       "  (linear2): Linear(in_features=1024, out_features=1024, bias=True)\n",
       "  (activation2): LeakyReLU(negative_slope=0.01)\n",
-      "  (dropout4): Dropout(p=0.4, inplace=False)\n",
+      "  (dropout4): Dropout(p=0.6, inplace=False)\n",
       "  (linear3): Linear(in_features=1024, out_features=2, bias=True)\n",
       "  (softmax): Softmax(dim=0)\n",
       ")\n"
@@ -467,8 +467,9 @@
     }
    ],
    "source": [
-    "model = PneumoniaModel((128, 128), 0.4, 16)\n",
+    "model = PneumoniaModel((128, 128), 0.6, 16)\n",
     "model.to(\"cuda\")\n",
+    "model.train()\n",
     "print(model)\n"
    ],
    "metadata": {
@@ -486,20 +487,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.24 0.0136\n",
-      "0.28 0.0136\n",
-      "0.32 0.0135\n",
-      "0.36 0.0135\n",
-      "0.4 0.0135\n",
-      "0.44 0.0135\n",
-      "0.48 0.0135\n",
-      "0.52 0.0135\n"
+      "0.24 0.014\n",
+      "0.28 0.014\n",
+      "0.32 0.014\n",
+      "0.36 0.014\n",
+      "0.4 0.014\n"
      ]
     }
    ],
    "source": [
     "criterion = CrossEntropyLoss().cuda()\n",
-    "learning_rate = 1e-5\n",
+    "learning_rate = 1e-3\n",
     "batch_size = 50\n",
     "epochs = 25\n",
     "optimizer = Adam(model.parameters(), lr=learning_rate)\n",
@@ -562,7 +560,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), os.path.join(os.path.abspath(\".\"), \"pneumodia_model.pt\"))"
+    "torch.save(model.cpu().state_dict(), os.path.join(os.path.abspath(\".\"), \"pneumodia_model.pt\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -577,6 +575,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "model.eval()\n",
     "img = [np.moveaxis(preprocess(cv2.imread(f)), -1, 0) for f in generate_images_list(\"PNEUMONIA\", 1)]\n",
     "\n",
     "plt.figure()\n",
@@ -585,14 +584,16 @@
     "plt.imshow(np.moveaxis(img[0], 0, -1), cmap=\"gray\")\n",
     "\n",
     "img = torch.tensor(img).float().cuda()\n",
-    "pred = model(img)\n",
+    "with torch.no_grad():\n",
+    "    pred = model(img)\n",
     "print(pred)\n",
     "pred = pred.cpu()\n",
     "idx = int(pred.argmax(1))\n",
     "title = f\"Chest X-Ray of a detected {img_types[idx].lower()} chest.\\n\"\n",
     "    # f\"With a confidence level of {float(pred[idx][0]):>5.2%}\"\n",
-    "features2 = model.forward(img, -1).detach().cpu()\n",
-    "features1 = model.forward(img, -2).detach().cpu()\n",
+    "with torch.no_grad():\n",
+    "    features2 = model.forward(img, -1).detach().cpu()\n",
+    "    features1 = model.forward(img, -2).detach().cpu()\n",
     "print(features1.shape)\n",
     "print(features2.shape)\n",
     "sns.set_theme(\"notebook\", \"white\")\n",
